cmake_minimum_required(VERSION 2.8)

SET_POLICIES()

add_subdirectory(account)
add_subdirectory(delegate)
add_subdirectory(dialog)
add_subdirectory(enex)
add_subdirectory(exception)
add_subdirectory(initialization)
add_subdirectory(model)
add_subdirectory(preferences)
add_subdirectory(tray)
add_subdirectory(utility)
add_subdirectory(view)
add_subdirectory(widget)
